Mise à jour du module formations - TU/Fixtures/Script